<resources>
    <string name="app_name">EK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="done_message">Done</string>
    <string name="connect_error_message">Error in getting data from API, trying again</string>
    <string name="no_data">No data available</string>
    <string name="population">Population : %1$s</string>
    <string name="bad_snack_info">More info …</string>
    <string name="bad_snack_inside">Change provider, stupid!</string>
    <string name="empty">No data available</string>
    <string name="sort">Sorting</string>
    <string name="test">test</string>
    <string name="isChecked">isChecked</string>
    <string name="button_dialog_with_one_button">OK</string>
    <string name="first_fragment_dialog_description">There is some description that i did not come up with, but someday it will definitely be</string>
    <string name="first_fragment_dialog_title">Greeting!</string>
    <string name="progress_bar_scale_width">100%</string>
    <string name="app_label">test_app</string>
    <string name="searching">Searching</string>
    <string name="somth_wrong">Something wrong</string>
    <string name="start">Open the list of countries</string>
    <string name="search_by_country_name">Search by country name</string>
    <string name="map">Open map</string>
    <string name="map_toolbar">Map</string>
    <string name="my_location">My location</string>
    <string name="sliders">Sliders</string>
    <string name="search">Search</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="access_to_device_location_denied">Access to device location denied!</string>
    <string name="bottom_sheet_dialog_message_text">The app requires access to the location of the device. You can revoke access through the settings menu at any time.</string>
    <string name="settings">Settings</string>
    <string name="allow_asses_to_device_location">Allow asses to device location?</string>
    <string name="access">Access</string>
    <string name="enter_max_distance_to_countries">Enter max distance to Countries…</string>
    <string name="slider_text_population">\By Population \n\t\t\t\tFrom: %1$d \t\tTo: %2$d</string>
    <string name="slider_text_area">\By Area \n\t\t\t\tFrom: %1$d \t\tTo: %2$d</string>
    <string name="sorted">Sorted!</string>
    <string name="sort_screen">Sort screen</string>
    <string name="list_of_capitals">List of capitals</string>
    <string name="i_am_here">I am here</string>
    <string name="error">Error!</string>
    <string name="comments">3</string>
    <string name="distance">%1$s km</string>
    <string name="list_of_regions">List of regions</string>
    <string name="notification_foreground_name">Location service by Country Application</string>
    <string name="news">news</string>
    <string name="search_by_capital">Search by capital name</string>
    <string name="countries_app">Countries Application</string>
    <string name="notification_content_text">This application get your current location</string>
    <string name="click_to_start">Click to start</string>
</resources>
