<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_toolbar"
        android:icon="@drawable/outline_map_24"
        android:menuCategory="container"
        android:title="@string/map_toolbar"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/twotone_radio_button_unchecked_white_24"
        android:title="@string/sort"
        android:menuCategory="container"
        app:showAsAction="always" />

    <item
        android:id="@+id/sliders_search"
        android:icon="@drawable/ic_round_sort_24"
        android:menuCategory="container"
        android:title="@string/sliders"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/places_ic_search"
        android:title="@string/searching"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

</menu>
