<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_start_screen">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_to_list_of_countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_layout_margin"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/base_layout_margin"
        android:background="@color/decorate_color"
        android:padding="@dimen/base_layout_margin"
        android:text="@string/start"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_to_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_layout_margin"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="@dimen/base_layout_margin"
        android:background="@color/decorate_color"
        android:padding="@dimen/base_layout_margin"
        android:text="@string/map"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_to_my_location_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_layout_margin"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="@dimen/base_layout_margin"
        android:background="@color/decorate_color"
        android:padding="@dimen/base_layout_margin"
        android:text="@string/my_location"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_to_capitals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_layout_margin"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="@dimen/base_layout_margin"
        android:background="@color/decorate_color"
        android:padding="@dimen/base_layout_margin"
        android:text="@string/list_of_capitals"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_to_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_layout_margin"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="@dimen/base_layout_margin"
        android:background="@color/decorate_color"
        android:padding="@dimen/base_layout_margin"
        android:text="@string/list_of_regions"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_to_news"
        android:background="@color/decorate_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_layout_margin"
        android:layout_marginEnd="@dimen/base_layout_margin"
        android:layout_marginTop="500dp"
        android:padding="@dimen/base_layout_margin"
        android:text="@string/news"
        tools:visibility="visible" />
</FrameLayout>